--- a/game-events/src/main/resources/templates/Layout.html
+++ b/game-events/src/main/resources/templates/Layout.html
@@ -278,7 +278,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/}">Home</a>
+                        <a class="nav-link" th:href="@{/}">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/events}">Events</a>
